# Sztuczna-Inteligencja

./: .gitignore  CMakeLists.txt  readme.md  setupLibs.bat
lab1/: CMakeLists.txt
lab1/src/: chessboard.cc  chessboard.h  gui.cc  gui.h  logger.cc  logger.h  loggerinterface.h  main.cc  plotstats.h  stats.cc  stats.h  statsinterface.h
lab3/: CMakeLists.txt
lab3/src/: chessboard.cc  chessboard.h  gui.cc  gui.h  main.cc  plotstats.h  stats.cc
lab5/: CMakeLists.txt
lab5/src/: chessboard.cc  chessboard.h  ea.cc  gui.h  logger.cc  plotstats.h  stats.h  statsinterface.h
lab6/src/: bayes.py
